# FFLv2-log

./: CMakeLists.txt
example/: CMakeLists.txt  logLibTest.cpp  main-simple.cpp
examples/: example1_main.cpp  example_httpserver.cpp
include/: FFLog.h
lib/: FFLog.cpp  LogPacket.cpp  LogPacket.hpp  LogSender.cpp  LogSender.hpp  LogTrasport.cpp  LogTrasport.hpp  LogTrasportFile.cpp  LogTrasportFile.hpp  LogTrasportHttpClient.cpp  LogTrasportHttpClient.hpp  LogTrasportTcpClient.cpp  LogTrasportTcpClient.hpp  LogUrl.cpp  LogUrl.hpp
loglib/: CMakeLists.txt  FFLv2Log.h  logLib.cpp  logLib.h  logLibTest.cpp  main.cpp
loglib/android/: CMakeLists.txt  FFLogClass.cpp  FFLogClass.hpp  JNImain.cpp  JavaFFLog.hpp  NativeFFLog.cpp  NativeFFLog.hpp
loglib/android/java/ffl/log/: FFLog.java.back
loglib/android/jnihelper/: JavaClass.cpp  JavaClass.hpp  JavaObject.cpp  JniHelper.cpp  JniHelper.hpp
loglib/android_jni/: FFLogClass.cpp  JNImain.cpp
loglib/android_jni/jnihelper/: JavaClass.cpp  JavaClass.hpp  JavaObject.hpp
loglib/jni/: JNImain.cpp  JavaFFLog.cpp  NativeFFLog.cpp  NativeFFLog.hpp
loglib/jni/java/ffl/log/: FFLog.java.back
loglib/jni/jnihelper/: JavaClass.cpp  JavaClass.hpp  JavaObject.cpp  JavaObject.hpp  JniHelper.cpp  JniHelper.hpp
loglib/logsender/: LogCollector.cpp  LogCollector.hpp  LogPipeline.cpp  LogPipeline.hpp  LogSender.hpp  LogUploader.hpp  LogWriterCreator.hpp
loglib/source/: FFLv2Log.cpp
loglib/source/logsender/: LogMessageId.hpp  LogMessages.hpp  LogSender.cpp  LogSenderType.hpp  LogUploader.cpp  LogWriterCreator.cpp
service/: logServer.cpp  main.cpp
web/: index.html
web/public/css/: index.scss  pub.scss
web/public/js/: index.js
web/public/js/redux/: index.js  list.js  react-redux-connect.js  store-index.js  store-list.js  store-table.js
web/public/js/router/: index.js  routerIndex.js
web/public/js/tools/: index.js
web/public/service/: decorator-index.js  service-index.js
web/public/view/: demo.js  test.js
web/public/view/index/: action-index.js  controller-index.js  index.js
web/public/view/index/css/: index.scss
web/public/view/table/: action-table.js  controller-table.js  index.js
